# oop-ai-talk

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
data/: patient_adherence_data.csv
src/: async_typer.py  cli.py
src/health_ai/: ai.py  audio.py  bot.py  config.py  eleven.py  email.py  extract.py  schemas.py  sql.py  transcribe.py  tts.py
